src/parser/mygrammar_parser.go
// Code generated from MyGrammar.g4 by ANTLR 4.13.0. DO NOT EDIT.

package parser // MyGrammar

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type MyGrammarParser struct {
	*antlr.BaseParser
}

var MyGrammarParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func mygrammarParserInit() {
	staticData := &MyGrammarParserStaticData
	staticData.LiteralNames = []string{
		"", "'['", "']'", "','", "'func'", "'||'", "'&&'", "'!'", "", "", "",
		"", "", "'main'", "'int'", "'float'", "'char'", "'boolean'", "'void'",
		"'return'", "'if'", "'else'", "'while'", "'scanf'", "'println'", "'('",
		"')'", "'{'", "'}'", "';'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "CONSTANTE", "NUM_INT", "NUM_DEC", "TEXTO",
		"COMP", "MAIN", "INT", "FLOAT", "CHAR", "BOOLEAN", "VOID", "RETURN",
		"IF", "ELSE", "WHILE", "SCANF", "PRINTLN", "LPAREN", "RPAREN", "LBRACE",
		"RBRACE", "SEMI", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", "MOD", "ID",
		"WS",
	}
	staticData.RuleNames = []string{
		"programa", "listaFuncoes", "decFuncao", "tipoRetorno", "tipo", "tipoBase",
		"dimensao", "parametros", "listaParametros", "principal", "bloco", "listaVariaveis",
		"listaId", "comandos", "comando", "leitura", "termoLeitura", "novoTermoLeitura",
		"dimensao2", "escrita", "termoEscrita", "novoTermoEscrita", "selecao",
		"senao", "enquanto", "atribuicao", "complemento", "funcao", "argumentos",
		"novoArgumento", "retorno", "expressao", "exprOu", "exprOu2", "exprE",
		"exprE2", "exprRelacional", "exprRelacional2", "exprAditiva", "exprAditiva2",
		"opAditivo", "exprMultiplicativa", "exprMultiplicativa2", "opMultiplicativo",
		"fator", "termo", "sinal",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// MyGrammarParserInit initializes any static state used to implement MyGrammarParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewMyGrammarParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func MyGrammarParserInit() {
	staticData := &MyGrammarParserStaticData
	staticData.once.Do(mygrammarParserInit)
}

// NewMyGrammarParser produces a new parser instance for the optional input antlr.TokenStream.
func NewMyGrammarParser(input antlr.TokenStream) *MyGrammarParser {
	MyGrammarParserInit()
	this := new(MyGrammarParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &MyGrammarParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "MyGrammar.g4"

	return this
}

// MyGrammarParser tokens.
const (
	MyGrammarParserEOF       = antlr.TokenEOF
	MyGrammarParserT__0      = 1
	MyGrammarParserT__1      = 2
	MyGrammarParserT__2      = 3
	MyGrammarParserT__3      = 4
	MyGrammarParserT__4      = 5
	MyGrammarParserT__5      = 6
	MyGrammarParserT__6      = 7
	MyGrammarParserCONSTANTE = 8
	MyGrammarParserNUM_INT   = 9
	MyGrammarParserNUM_DEC   = 10
	MyGrammarParserTEXTO     = 11
	MyGrammarParserCOMP      = 12
	MyGrammarParserMAIN      = 13
	MyGrammarParserINT       = 14
	MyGrammarParserFLOAT     = 15
	MyGrammarParserCHAR      = 16
	MyGrammarParserBOOLEAN   = 17
	MyGrammarParserVOID      = 18
	MyGrammarParserRETURN    = 19
	MyGrammarParserIF        = 20
	MyGrammarParserELSE      = 21
	MyGrammarParserWHILE     = 22
	MyGrammarParserSCANF     = 23
	MyGrammarParserPRINTLN   = 24
	MyGrammarParserLPAREN    = 25
	MyGrammarParserRPAREN    = 26
	MyGrammarParserLBRACE    = 27
	MyGrammarParserRBRACE    = 28
	MyGrammarParserSEMI      = 29
	MyGrammarParserASSIGN    = 30
	MyGrammarParserPLUS      = 31
	MyGrammarParserMINUS     = 32
	MyGrammarParserMUL       = 33
	MyGrammarParserDIV       = 34
	MyGrammarParserMOD       = 35
	MyGrammarParserID        = 36
	MyGrammarParserWS        = 37
)

// MyGrammarParser rules.
const (
	MyGrammarParserRULE_programa            = 0
	MyGrammarParserRULE_listaFuncoes        = 1
	MyGrammarParserRULE_decFuncao           = 2
	MyGrammarParserRULE_tipoRetorno         = 3
	MyGrammarParserRULE_tipo                = 4
	MyGrammarParserRULE_tipoBase            = 5
	MyGrammarParserRULE_dimensao            = 6
	MyGrammarParserRULE_parametros          = 7
	MyGrammarParserRULE_listaParametros     = 8
	MyGrammarParserRULE_principal           = 9
	MyGrammarParserRULE_bloco               = 10
	MyGrammarParserRULE_listaVariaveis      = 11
	MyGrammarParserRULE_listaId             = 12
	MyGrammarParserRULE_comandos            = 13
	MyGrammarParserRULE_comando             = 14
	MyGrammarParserRULE_leitura             = 15
	MyGrammarParserRULE_termoLeitura        = 16
	MyGrammarParserRULE_novoTermoLeitura    = 17
	MyGrammarParserRULE_dimensao2           = 18
	MyGrammarParserRULE_escrita             = 19
	MyGrammarParserRULE_termoEscrita        = 20
	MyGrammarParserRULE_novoTermoEscrita    = 21
	MyGrammarParserRULE_selecao             = 22
	MyGrammarParserRULE_senao               = 23
	MyGrammarParserRULE_enquanto            = 24
	MyGrammarParserRULE_atribuicao          = 25
	MyGrammarParserRULE_complemento         = 26
	MyGrammarParserRULE_funcao              = 27
	MyGrammarParserRULE_argumentos          = 28
	MyGrammarParserRULE_novoArgumento       = 29
	MyGrammarParserRULE_retorno             = 30
	MyGrammarParserRULE_expressao           = 31
	MyGrammarParserRULE_exprOu              = 32
	MyGrammarParserRULE_exprOu2             = 33
	MyGrammarParserRULE_exprE               = 34
	MyGrammarParserRULE_exprE2              = 35
	MyGrammarParserRULE_exprRelacional      = 36
	MyGrammarParserRULE_exprRelacional2     = 37
	MyGrammarParserRULE_exprAditiva         = 38
	MyGrammarParserRULE_exprAditiva2        = 39
	MyGrammarParserRULE_opAditivo           = 40
	MyGrammarParserRULE_exprMultiplicativa  = 41
	MyGrammarParserRULE_exprMultiplicativa2 = 42
	MyGrammarParserRULE_opMultiplicativo    = 43
	MyGrammarParserRULE_fator               = 44
	MyGrammarParserRULE_termo               = 45
	MyGrammarParserRULE_sinal               = 46
)

// IProgramaContext is an interface to support dynamic dispatch.
type IProgramaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ListaFuncoes() IListaFuncoesContext
	Principal() IPrincipalContext
	EOF() antlr.TerminalNode

	// IsProgramaContext differentiates from other interfaces.
	IsProgramaContext()
}

type ProgramaContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramaContext() *ProgramaContext {
	var p = new(ProgramaContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_programa
	return p
}

func InitEmptyProgramaContext(p *ProgramaContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_programa
}

func (*ProgramaContext) IsProgramaContext() {}

func NewProgramaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramaContext {
	var p = new(ProgramaContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MyGrammarParserRULE_programa

	return p
}

func (s *ProgramaContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramaContext) ListaFuncoes() IListaFuncoesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IListaFuncoesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IListaFuncoesContext)
}

func (s *ProgramaContext) Principal() IPrincipalContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrincipalContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrincipalContext)
}

func (s *ProgramaContext) EOF() antlr.TerminalNode {
	return s.GetToken(MyGrammarParserEOF, 0)
}

func (s *ProgramaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGrammarListener); ok {
		listenerT.EnterPrograma(s)
	}
}

func (s *ProgramaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGrammarListener); ok {
		listenerT.ExitPrograma(s)
	}
}

func (p *MyGrammarParser) Programa() (localctx IProgramaContext) {
	localctx = NewProgramaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MyGrammarParserRULE_programa)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(94)
		p.ListaFuncoes()
	}
	{
		p.SetState(95)
		p.Principal()
	}
	{
		p.SetState(96)
		p.Match(MyGrammarParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IListaFuncoesContext is an interface to support dynamic dispatch.
type IListaFuncoesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DecFuncao() IDecFuncaoContext
	ListaFuncoes() IListaFuncoesContext

	// IsListaFuncoesContext differentiates from other interfaces.
	IsListaFuncoesContext()
}

type ListaFuncoesContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyListaFuncoesContext() *ListaFuncoesContext {
	var p = new(ListaFuncoesContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_listaFuncoes
	return p
}

func InitEmptyListaFuncoesContext(p *ListaFuncoesContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_listaFuncoes
}

func (*ListaFuncoesContext) IsListaFuncoesContext() {}

func NewListaFuncoesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ListaFuncoesContext {
	var p = new(ListaFuncoesContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MyGrammarParserRULE_listaFuncoes

	return p
}

func (s *ListaFuncoesContext) GetParser() antlr.Parser { return s.parser }

func (s *ListaFuncoesContext) DecFuncao() IDecFuncaoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDecFuncaoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDecFuncaoContext)
}

func (s *ListaFuncoesContext) ListaFuncoes() IListaFuncoesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IListaFuncoesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IListaFuncoesContext)
}

func (s *ListaFuncoesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ListaFuncoesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ListaFuncoesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGrammarListener); ok {
		listenerT.EnterListaFuncoes(s)
	}
}

func (s *ListaFuncoesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGrammarListener); ok {
		listenerT.ExitListaFuncoes(s)
	}
}

func (p *MyGrammarParser) ListaFuncoes() (localctx IListaFuncoesContext) {
	localctx = NewListaFuncoesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MyGrammarParserRULE_listaFuncoes)
	p.SetState(102)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case MyGrammarParserINT, MyGrammarParserFLOAT, MyGrammarParserCHAR, MyGrammarParserBOOLEAN, MyGrammarParserVOID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(98)
			p.DecFuncao()
		}
		{
			p.SetState(99)
			p.ListaFuncoes()
		}

	case MyGrammarParserMAIN:
		p.EnterOuterAlt(localctx, 2)

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDecFuncaoContext is an interface to support dynamic dispatch.
type IDecFuncaoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	TipoRetorno() ITipoRetornoContext
	ID() antlr.TerminalNode
	LPAREN() antlr.TerminalNode
	Parametros() IParametrosContext
	RPAREN() antlr.TerminalNode
	Bloco() IBlocoContext

	// IsDecFuncaoContext differentiates from other interfaces.
	IsDecFuncaoContext()
}

type DecFuncaoContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDecFuncaoContext() *DecFuncaoContext {
	var p = new(DecFuncaoContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_decFuncao
	return p
}

func InitEmptyDecFuncaoContext(p *DecFuncaoContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_decFuncao
}

func (*DecFuncaoContext) IsDecFuncaoContext() {}

func NewDecFuncaoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DecFuncaoContext {
	var p = new(DecFuncaoContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MyGrammarParserRULE_decFuncao

	return p
}

func (s *DecFuncaoContext) GetParser() antlr.Parser { return s.parser }

func (s *DecFuncaoContext) TipoRetorno() ITipoRetornoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITipoRetornoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITipoRetornoContext)
}

func (s *DecFuncaoContext) ID() antlr.TerminalNode {
	return s.GetToken(MyGrammarParserID, 0)
}

func (s *DecFuncaoContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(MyGrammarParserLPAREN, 0)
}

func (s *DecFuncaoContext) Parametros() IParametrosContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParametrosContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParametrosContext)
}

func (s *DecFuncaoContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(MyGrammarParserRPAREN, 0)
}

func (s *DecFuncaoContext) Bloco() IBlocoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlocoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlocoContext)
}

func (s *DecFuncaoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DecFuncaoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DecFuncaoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGrammarListener); ok {
		listenerT.EnterDecFuncao(s)
	}
}

func (s *DecFuncaoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGrammarListener); ok {
		listenerT.ExitDecFuncao(s)
	}
}

func (p *MyGrammarParser) DecFuncao() (localctx IDecFuncaoContext) {
	localctx = NewDecFuncaoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, MyGrammarParserRULE_decFuncao)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(104)
		p.TipoRetorno()
	}
	{
		p.SetState(105)
		p.Match(MyGrammarParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(106)
		p.Match(MyGrammarParserLPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(107)
		p.Parametros()
	}
	{
		p.SetState(108)
		p.Match(MyGrammarParserRPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(109)
		p.Bloco()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITipoRetornoContext is an interface to support dynamic dispatch.
type ITipoRetornoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Tipo() ITipoContext
	VOID() antlr.TerminalNode

	// IsTipoRetornoContext differentiates from other interfaces.
	IsTipoRetornoContext()
}

type TipoRetornoContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTipoRetornoContext() *TipoRetornoContext {
	var p = new(TipoRetornoContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_tipoRetorno
	return p
}

func InitEmptyTipoRetornoContext(p *TipoRetornoContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_tipoRetorno
}

func (*TipoRetornoContext) IsTipoRetornoContext() {}

func NewTipoRetornoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TipoRetornoContext {
	var p = new(TipoRetornoContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MyGrammarParserRULE_tipoRetorno

	return p
}

func (s *TipoRetornoContext) GetParser() antlr.Parser { return s.parser }

func (s *TipoRetornoContext) Tipo() ITipoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITipoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITipoContext)
}

func (s *TipoRetornoContext) VOID() antlr.TerminalNode {
	return s.GetToken(MyGrammarParserVOID, 0)
}

func (s *TipoRetornoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TipoRetornoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TipoRetornoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGrammarListener); ok {
		listenerT.EnterTipoRetorno(s)
	}
}

func (s *TipoRetornoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGrammarListener); ok {
		listenerT.ExitTipoRetorno(s)
	}
}

func (p *MyGrammarParser) TipoRetorno() (localctx ITipoRetornoContext) {
	localctx = NewTipoRetornoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, MyGrammarParserRULE_tipoRetorno)
	p.SetState(113)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case MyGrammarParserINT, MyGrammarParserFLOAT, MyGrammarParserCHAR, MyGrammarParserBOOLEAN:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(111)
			p.Tipo()
		}

	case MyGrammarParserVOID:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(112)
			p.Match(MyGrammarParserVOID)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITipoContext is an interface to support dynamic dispatch.
type ITipoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	TipoBase() ITipoBaseContext
	Dimensao() IDimensaoContext

	// IsTipoContext differentiates from other interfaces.
	IsTipoContext()
}

type TipoContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTipoContext() *TipoContext {
	var p = new(TipoContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_tipo
	return p
}

func InitEmptyTipoContext(p *TipoContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_tipo
}

func (*TipoContext) IsTipoContext() {}

func NewTipoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TipoContext {
	var p = new(TipoContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MyGrammarParserRULE_tipo

	return p
}

func (s *TipoContext) GetParser() antlr.Parser { return s.parser }

func (s *TipoContext) TipoBase() ITipoBaseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITipoBaseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITipoBaseContext)
}

func (s *TipoContext) Dimensao() IDimensaoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDimensaoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDimensaoContext)
}

func (s *TipoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TipoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TipoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGrammarListener); ok {
		listenerT.EnterTipo(s)
	}
}

func (s *TipoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGrammarListener); ok {
		listenerT.ExitTipo(s)
	}
}

func (p *MyGrammarParser) Tipo() (localctx ITipoContext) {
	localctx = NewTipoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, MyGrammarParserRULE_tipo)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(115)
		p.TipoBase()
	}
	{
		p.SetState(116)
		p.Dimensao()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITipoBaseContext is an interface to support dynamic dispatch.
type ITipoBaseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	INT() antlr.TerminalNode
	FLOAT() antlr.TerminalNode
	CHAR() antlr.TerminalNode
	BOOLEAN() antlr.TerminalNode

	// IsTipoBaseContext differentiates from other interfaces.
	IsTipoBaseContext()
}

type TipoBaseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTipoBaseContext() *TipoBaseContext {
	var p = new(TipoBaseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_tipoBase
	return p
}

func InitEmptyTipoBaseContext(p *TipoBaseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGrammarParserRULE_tipoBase
}

func (*TipoBaseContext) IsTipoBaseContext() {}

func NewTipoBaseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TipoBaseContext {
	var p = new(TipoBaseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MyGrammarParserRULE_tipoBase

	return p
}

func (s *TipoBaseContext) GetParser() antlr.Parser { return s.parser }

func (s *TipoBaseContext) INT() antlr.TerminalNode {
	return s.GetToken(MyGrammarParserINT, 0)
}
